Fix borders and align colors

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -5,6 +5,7 @@
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
   background-color: $highlight-color-day;
+  border-bottom: 1px solid $border-color;
 
   // Positioning context for the mobile navigation icon
   position: relative;
@@ -23,7 +24,7 @@
 
   &,
   &:visited {
-    color: $grey-color-dark;
+    color: $text-color-day;
   }
 }
 
@@ -31,8 +32,8 @@
   position: absolute;
   top: 9px;
   right: $spacing-unit / 2;
-  background-color: $background-color;
-  border: 1px solid $grey-color-light;
+  background-color: $highlight-color-day;
+  border: 1px solid $border-color;
   border-radius: 5px;
   text-align: right;
 
@@ -49,7 +50,7 @@
     text-align: center;
 
     > svg path {
-      fill: $grey-color-dark;
+      fill: $comment-color-day;
     }
   }
 
@@ -73,7 +74,7 @@
   }
 
   .page-link {
-    color: $text-color;
+    color: $text-color-day;
     line-height: $base-line-height;
     display: block;
     padding: 5px 10px;
@@ -123,6 +124,7 @@
 .site-footer {
   background-color: $highlight-color-day;
   padding: $spacing-unit 0;
+  border-top: 1px solid $border-color;
 }
 
 .contact-list,
@@ -176,7 +178,7 @@
 
 .post-meta {
   font-size: $small-font-size;
-  color: $grey-color;
+  color: $comment-color-day;
 }
 
 .post-link {
@@ -244,8 +246,7 @@
     a {
       display: block;
       padding: $spacing-unit / 4;
-      border: 1px solid $comment-color-day;
-      background-color: $background-color-day;
+      border: 1px solid $border-color;
     }
     &:hover .svg-icon { fill: currentColor; }
   }
